--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url("./styles/variables.css");
+@import url("./styles/animations.css");
 @import url("./styles/reset.css");
 @import url("./styles/base.css");
 @import url("./styles/layouts.css");
