--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,6 @@
+html {
+  scrollbar-gutter: stable;
+}
 body {
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell,
     Noto Sans, sans-serif;
@@ -7,6 +10,12 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   place-items: center;
+}
+
+@supports (height: 100dvh) {
+  body {
+    min-height: 100dvh;
+  }
 }
 
 main {
