--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -5,7 +5,7 @@
   padding: 1rem 2rem;
   box-shadow: var(--shadow);
 }
-.page-home {
+.page-blog {
   --article-size: 20rem;
   width: clamp(20rem, 95%, 150rem);
   display: grid;
