--- a/templates/layouts/base.edge
+++ b/templates/layouts/base.edge
@@ -15,12 +15,14 @@
     </head>
     <body>
         <header>
-            <a href="/" class="siteTitle">{{ siteTitle }}</a>
+            <a href="{{base}}/" class="siteTitle">{{ siteTitle }}</a>
             <nav>
-                <ul role="list">
-                    @each( item in routes('/{,*}'))
-                        <li>
-                            <a href="{{ item.url }}" class="{{ item.data.title===title ? 'current' : '' }}">
+                @set('navRoutes',routes('/{,*}'))
+                @set('currentItem',navRoutes.findIndex((el) => el.data.title===title))
+                <ul role="list" style="--n-items:{{navRoutes.length}}; --current-item:{{currentItem > -1 ? currentItem : 0}}">
+                    @each( item in navRoutes)
+                        <li class="nav_item">
+                            <a href="{{base + item.url }}" class="nav_link {{ item.data.title===title ? 'current' : '' }}">
                                 {{capitalize( item.data.title) }}
                             </a>
                         </li>
