--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -10,6 +10,7 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   place-items: center;
+  overflow-x: hidden;
 }
 
 @supports (height: 100dvh) {
